# motoman

motoman/: package.xml
motoman_mh6_moveit_config/launch/: moveit.rviz  robot_interface_streaming_motoman_mh6.launch
motoman_robot_monitoring/: CMakeLists.txt  package.xml
motoman_robot_monitoring/include/motoman_robot_monitoring/: motoman_robot_monitoring.h
motoman_robot_monitoring/launch/: motoman_robot_monitoring.launch
motoman_robot_monitoring/scripts/: motoman_robot_monitoring.py
motoman_robot_monitoring/src/: alarm_error_occurred.cpp  battery_alarm.cpp  play_mode_selected.cpp  remote_mode_selected.cpp  running.cpp  servo_is_on.cpp  teach_mode_selected.cpp  top_of_master_job.cpp
motoman_sda20d_support/: CMakeLists.txt
motoman_sda20d_support/config/: sda20d_motion_interface.yaml
motoman_sda20d_support/meshes/collision/: base_link.STL  link_1_s.STL  link_2_l.STL  link_3_e.STL  link_4_u.STL  link_5_r.STL  link_6_b.STL  link_7_t.STL  link_b1.STL
motoman_sda20d_support/meshes/visual/: base_link.STL  link_1_s.STL  link_2_l.STL  link_3_e.STL  link_4_u.STL  link_5_r.STL  link_6_b.STL  link_7_t.STL  link_b1.STL
motoman_sda20d_support/urdf/: arm_macro.xacro  common_torso_macro.xacro  sda20d.xacro  sda20d_macro.xacro
motoman_sda20d_with_gripper_hole_kinect_moveit_config/: CMakeLists.txt  package.xml
motoman_sda20d_with_gripper_hole_kinect_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sda20d_gripper_hole_kinect.srdf  sensors_3d.yaml  sensors_kinect_depthmap.yaml
motoman_sda20d_with_gripper_hole_kinect_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_interface_streaming_sda20d.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motoman_sda20d_with_gripper_hole_kinect_support/: CMakeLists.txt  manifest.xml  package.xml
motoman_sda20d_with_gripper_hole_kinect_support/urdf/: hole.xacro  model.urdf  sda20d_gripper_hole_kinect.xacro
motoman_sda20d_with_grippers_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  motoman_sda20d_with_grippers_support.srdf  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml  stomp_planning.yaml
motoman_sda20d_with_grippers_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  demo_rosbag.launch  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  planning_context.launch  robot_interface_streaming_sda20d.launch  ros_controllers.launch  sensor_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
motoman_sda20d_with_grippers_support/: CMakeLists.txt
motoman_sda20d_with_grippers_support/urdf/: sda20d_with_grippers.urdf  sda20d_with_grippers.xacro
motoman_sda20d_with_peg_hole_kinect_moveit_config/: CMakeLists.txt  package.xml
motoman_sda20d_with_peg_hole_kinect_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sda20d_gripper_hole_kinect.srdf  sensors_3d.yaml
motoman_sda20d_with_peg_hole_kinect_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_interface_streaming_sda20d.launch  ros_controllers.launch  run_benchmark_ompl.launch  sda20d_gripper_hole_kinect_moveit_controller_manager.launch.xml  sda20d_gripper_hole_kinect_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motoman_sda20d_with_peg_hole_kinect_support/: CMakeLists.txt  package.xml
motoman_sda20d_with_peg_hole_kinect_support/urdf/: hole.xacro  kinect.xacro  model.urdf  peg.xacro  sda20d_gripper_hole_kinect.xacro
